# advent_of_code

./: pyproject.toml
2024/: pyproject.toml
2024/one/tests/: test_parse_list.py
2024/src/aoc_2024/: io.py
2024/src/aoc_2024/cmd/day_five/: __init__.py
2024/src/aoc_2024/cmd/day_four/: __init__.py
2024/src/aoc_2024/cmd/day_one/: __init__.py
2024/src/aoc_2024/cmd/day_six/: __init__.py
2024/src/aoc_2024/cmd/day_three/: __init__.py
2024/src/aoc_2024/cmd/day_two/: __init__.py
2024/tests/: test_day_five.py  test_day_four.py  test_day_one.py  test_day_six.py  test_day_three.py  test_day_two.py  test_io.py
2025/: README.md  pyproject.toml
2025/src/aoc_2025/: __init__.py
2025/src/aoc_2025/day_01/: __init__.py
2025/src/aoc_2025/day_02/: __init__.py
2025/src/aoc_2025/day_03/: __init__.py
2025/src/aoc_2025/day_04/: __init__.py
2025/src/aoc_2025/day_05/: __init__.py
2025/src/aoc_2025/day_06/: __init__.py
2025/src/aoc_2025/day_07/: __init__.py
2025/src/aoc_2025/day_08/: __init__.py
2025/src/aoc_2025/day_09/: __init__.py
2025/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py
src/aoc_2024_one/: __init__.py
tests/: test_parse_list.py
