[project]
name = "aoc_2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Brand", email = "tom025@me.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-timeout>=2.3.1",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]
